--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@ img {
       This data is relevant because it suggests a mechanism to limit the systemic spread of the parasite and enhance parasite control by pre-activating cells before lesion entry. 
      </p>
      <p>
-      <i>Amorim et al. 2021, MedRxiv, <a href="https://www.medrxiv.org/content/10.1101/2020.12.03.20240978v1" target="_blank">DOI: 10.1101/2020.12.03.20240978</a></i>
+      <i>Amorim et al. 2021, PLOS NTDs, <a href="https://journals.plos.org/plosntds/article?id=10.1371/journal.pntd.0009321" target="_blank">DOI: 10.1371/journal.pntd.0009321</a></i>
      </p>
 
      <br><br><br>  
