fixed image position

--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@ img {
     I used the infection by the protozoan <i>Leishmania spp.</i> as my field of study, because this skin infection is highly immunogenic. I learned immensely about the immune system by exploring the disease caused by this parasite.</p>
     <p>My goal is to use data science to improve patient care and quality of life.</p>
     <p><i>My research <a href="https://github.com/camilafarias112/Career_portfolio" target="_blank">timeline</a>:</i></p>
-    <img src="/images/content/timeline.png" class="w3-image" style="float:center;width:500px;height:250px;margin-left:100px;">
+    <img src="/images/content/timeline.png" class="w3-image" style="float:center;width:500px;height:250px;">
   </div>
 
   <!-- Keywords -->
