--- a/index.html
+++ b/index.html
@@ -157,7 +157,7 @@ img {
   <div class="w3-content w3-justify w3-text-grey w3-padding-32" id="cv">
     <h2>Curriculum vitae</h2>
     <hr class="w3-opacity">   
-    <p>My <a href="https://drive.google.com/file/d/1-d3BZB6HsbCp2J93keHfddXuGsMso241/view?usp=share_link">CV</a>.</p> 
+    <p>My <a href="https://drive.google.com/file/d/1-ymmW0fmm4D72QKUk-5i8UusnoEtOtcb/view?usp=sharing">CV</a>.</p> 
   </div>
 
   <!-- My picture -->  
