updated cv and edited intro

--- a/index.html
+++ b/index.html
@@ -65,8 +65,7 @@ img {
     <p>Welcome to my website!</p>
     <p>I am a brazillian scientist at the University of Pennsylvania. I use computational biology frameworks and statistical inference to identify patterns in large sequencing datasets that can predict worse disease outcomes and genetic biomarkers that can be targeted as immunotherapies.</p>
     <p>My research experience has a <i>Translational</i> nature, as I have been interacting with patients, clinical staff, physicians, principal investigators, immunologists, bench/experimental scientists and bioinformaticians.</p>
-    <p>My background is in Immunology and Infectious Diseases, and I investigate the interplay between host and pathogens in the skin. 
-    I used the infection by the protozoan <i>Leishmania spp.</i> as my field of study, because this skin infection is highly immunogenic. I learned immensely about the immune system by exploring the disease caused by this parasite.</p>
+    <p>My background is in Immunology and Infectious Diseases, and I investigate the interplay between host and pathogens in the skin.</p>
     <p>My goal is to use data science to improve patient care and quality of life.</p>
     <p><i>My research <a href="https://github.com/camilafarias112/Career_portfolio" target="_blank">timeline</a>:</i></p>
     <img src="/images/content/timeline.png" class="w3-image" style="float:center;width:500px;height:250px;">
@@ -76,10 +75,10 @@ img {
   <div class="w3-content w3-justify w3-text-grey w3-padding-32" id="keywords">
     <h2>Keywords</h2>
     <hr class="w3-opacity">    
-      <p><i>Biology and clinical-related keywords:</i></p>
-      infection; T cells; NK cells; myeloid cells; skin; microbiome; virus; bacteria; human patients; mouse models; treatment; DNA; RNA; genome; transcriptome; cellular/molecular biology; next-generation sequencing
-      <p><i>Bioinformatics-related keywords:</i></p>
-      R; bash; Unix/Linux OS; shell scripting; Bioconductor; tidyverse; linear modeling; machine learning; supervised/unsupervised classification; GitHub; version control; datasets; ggplot; statistical inference
+      <p><i>Biology and clinical research:</i></p>
+      Biomarkers; target validation; drug discovery; immunotherapy; infection; T cells; NK cells; myeloid cells; skin; microbiome; virus; bacteria; human patients; KO and CRISPR mouse models; therapy; DNA; RNA; genome; transcriptome; cellular/molecular biology; dermatology 
+      <p><i>Bioinformatics:</i></p>
+      Next-generation sequencing; R; bash; Unix/Linux OS; shell scripting; Bioconductor; tidyverse; data visualization; linear modeling; machine learning; supervised/unsupervised classification; dimensionality reduction; GitHub; version control; cloud; ShinyR; datasets; ggplot; statistical inference; pathway analysis; data patterns
   </div>
 
   <!-- Publications -->
@@ -157,7 +156,7 @@ img {
   <div class="w3-content w3-justify w3-text-grey w3-padding-32" id="cv">
     <h2>Curriculum vitae</h2>
     <hr class="w3-opacity">   
-    <p>My <a href="https://drive.google.com/file/d/10GvdAhEr-1_0g93m4veqAgxYklFRjygX/view?usp=sharing">CV</a>.</p> 
+    <p>My <a href="https://drive.google.com/file/d/10rPqmzxRYi8qYdTu1H11uLmkaBV0Vx6b/view?usp=sharing">CV</a>.</p> 
   </div>
 
   <!-- My picture -->  
