updated intro and cv url

--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html>
-<title>Camila Farias Amorim, Ph.D</title>
+<title>Camila Farias Amorim, MS., Ph.D</title>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=3">
 <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
@@ -54,18 +54,18 @@ img {
   <!-- Header -->
   <header class="w3-container w3-center" style="padding:20px 16px" id="home">
     <h2><b>Camila Farias Amorim, Ph.D.</b></h2>
-    <p>Immunology - Computational Biology - Bioinformatics</p>
-    <p>Translational Data Science</p>
+    <p>Immunology - Translational Medicine</p>
+    <p>Computational Biology - Bioinformatics - Statistical Inference</p>
   </header>
 
     <!-- About and photo -->
   <div class="w3-content w3-justify w3-text-grey w3-padding-32" id="about">
     <h2>About Me</h2>
     <hr class="w3-opacity">    
-    <p>Welcome to my website!</p>
-    <p>I am a brazillian scientist at the University of Pennsylvania. I use computational biology frameworks and statistical inference to identify patterns in large sequencing datasets that can predict worse disease outcomes and genetic biomarkers that can be targeted as immunotherapies.</p>
+    <p>Hello! Welcome to my website.</p>
+    <p>As a brazillian Immunologist scientist, and I develop computational biology algorithms to identify patterns in high-throughput Next-generation seqeucing (NGS) datasets to predict worse disease outcomes and genetic biomarkers that can be targeted as immunotherapies.</p>
+    <p>I use statistical inference (R, linear modeling, machine learning tools, (un)supervised classification methods, and multi-omics integration strategies to detect patterns in these large expression datasets.</p>
     <p>My research experience has a <i>Translational</i> nature, as I have been interacting with patients, clinical staff, physicians, principal investigators, immunologists, bench/experimental scientists and bioinformaticians.</p>
-    <p>My background is in Immunology and Infectious Diseases, and I investigate the interplay between host and pathogens in the skin.</p>
     <p>My goal is to use data science to improve patient care and quality of life.</p>
     <p><i>My research <a href="https://github.com/camilafarias112/Career_portfolio" target="_blank">timeline</a>:</i></p>
     <img src="/images/content/timeline.png" class="w3-image" style="float:center;width:500px;height:250px;">
@@ -75,11 +75,8 @@ img {
   <div class="w3-content w3-justify w3-text-grey w3-padding-32" id="keywords">
     <h2>Keywords</h2>
     <hr class="w3-opacity">    
-      <p><i>Biology and clinical research:</i></p>
-      Biomarkers; target validation; drug discovery; immunotherapy; infection; T cells; NK cells; myeloid cells; skin; microbiome; virus; bacteria; human patients; KO and CRISPR mouse models; therapy; DNA; RNA; genome; transcriptome; cellular/molecular biology; dermatology 
-      <p><i>Bioinformatics:</i></p>
-      Next-generation sequencing; R; bash; Unix/Linux OS; shell scripting; Bioconductor; tidyverse; data visualization; linear modeling; machine learning; supervised/unsupervised classification; dimensionality reduction; GitHub; version control; cloud; ShinyR; datasets; ggplot; statistical inference; pathway analysis; data patterns
-  </div>
+      high-throughput NGS; R; python; C++; bash; Unix/Linux OS; command-line tools; shell scripting; read mapping; Illumina sequencing; DNA; RNA; RNAseq, Dual-RNAseq; single-cell RNAseq, CITE-Seq, 16S-seq, WGS, clinical metadata; Bioconductor; tidyverse; data visualization; linear modeling; machine learning; supervised/unsupervised classification; hierarchical clustering; dimensionality reduction; pattern recognition; GitHub; version control; cloud; ShinyApp; datasets; ggplot; statistical inference; pathway analysis; GSEA; GO; GEO NCBI
+   </div>
 
   <!-- Publications -->
   <div class="w3-content w3-justify w3-text-grey w3-padding-32" id="publications">
@@ -156,7 +153,7 @@ img {
   <div class="w3-content w3-justify w3-text-grey w3-padding-32" id="cv">
     <h2>Curriculum vitae</h2>
     <hr class="w3-opacity">   
-    <p>My <a href="https://drive.google.com/file/d/10rPqmzxRYi8qYdTu1H11uLmkaBV0Vx6b/view?usp=sharing">CV</a>.</p> 
+    <p>My <a href="https://drive.google.com/file/d/11d5p_qh1mCWU3VVYVZ9PYwjI837Rt2Bi/view?usp=sharing">CV</a>.</p> 
   </div>
 
   <!-- My picture -->  
