--- a/index.html
+++ b/index.html
@@ -63,8 +63,8 @@ img {
     <h2>About Me</h2>
     <hr class="w3-opacity">    
     <p>Hello! Welcome to my website.</p>
-    <p>As a brazillian Immunologist scientist, and I develop computational biology algorithms to identify patterns in high-throughput Next-generation seqeucing (NGS) datasets to predict worse disease outcomes and genetic biomarkers that can be targeted as immunotherapies.</p>
-    <p>I use statistical inference (R, linear modeling, machine learning tools, (un)supervised classification methods, and multi-omics integration strategies to detect patterns in these large expression datasets.</p>
+    <p>As a brazillian Immunologist scientist, and I develop computational biology algorithms to identify patterns in high-throughput Next-generation sequencing (NGS) datasets to predict worse disease outcomes and genetic biomarkers that can be targeted as immunotherapies.</p>
+    <p>I use R and statistical inference such as linear modeling, machine learning tools, (un)supervised classification methods, and multi-omics integration strategies to detect patterns in these large expression datasets.</p>
     <p>My research experience has a <i>Translational</i> nature, as I have been interacting with patients, clinical staff, physicians, principal investigators, immunologists, bench/experimental scientists and bioinformaticians.</p>
     <p>My goal is to use data science to improve patient care and quality of life.</p>
     <p><i>My research <a href="https://github.com/camilafarias112/Career_portfolio" target="_blank">timeline</a>:</i></p>
