website update jan 2026 2

--- a/index.html
+++ b/index.html
@@ -76,9 +76,9 @@ img {
     <p>Currently working on a Principal Scientist role at <a href="https://www.centurytx.com/" target="_blank">Century Therapeutics Inc.</a>,
     <a href="https://www.linkedin.com/in/camila-farias-amorim-ms-phd/" target="_blank">LinkedIn</a></p>  
     <p>Leading the NGS and molecular assay strategies across research, cell therapy manufacturing, and external stakeholder communication. Scope includes study design, assay development (qPCR, flow cytometry, CITE-seq, scRNA-seq, spatial transcriptomics), PK/PD and statistical modeling, and multi-omics data integration to inform product optimization and program strategy.</p>  
-    <p>Works horizontally across iPSC biology, immunology, differentiation, translational, manufacturing, and clinical teams, and oversees Omics-focused collaborations with CROs and technology vendors, ensuring experimental rigor, data quality, and cross-study comparability.</p>
+    <p>Working horizontally across iPSC biology, immunology, differentiation, translational, manufacturing, and clinical teams, and oversees Omics-focused collaborations with CROs and technology vendors, ensuring experimental rigor, data quality, and cross-study comparability.</p>
     <p>I lead company-wide Research Omics forums to align wet- and dry-lab teams and translate complex NGS datasets into actionable insights. Background includes biomarker and target discovery, predictive modeling, immunotherapies, vaccines, and early clinical biomarker strategy, with prior experience teaching NGS and bioinformatics at the University of Pennsylvania and 20+ peer-reviewed publications.</p>
-    <p>Focuses on connecting biological insight, quantitative analysis, and collaborative execution to support rigorous science and patient-relevant outcomes.</p>
+    <p>Focusing on connecting biological insight, quantitative analysis, and collaborative execution to support rigorous science and patient-relevant outcomes.</p>
 
       <br><br>
 
